--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                         省$120
                                     </div>
                                 </div>
-                                <p class="text-sm text-gray-600 mb-4">长期规划/兄妹合上更优惠</p>
+                                <p class="text-sm text-gray-600 mb-4">长期规划更优惠</p>
                                 <input type="radio" name="package" value="package20" id="package20" class="hidden">
                                 <label for="package20" class="block w-full py-2 px-4 rounded-lg font-semibold btn-secondary cursor-pointer text-center">
                                     选择套餐
@@ -343,9 +343,9 @@
                 <div class="mt-8 text-center">
                     <p class="text-gray-600 mb-2">咨询报名请联系</p>
                     <div class="flex justify-center items-center space-x-6 text-sm flex-wrap gap-2">
-                        <span class="text-orange-600 font-semibold">📞 咨询热线: 400-XXX-XXXX</span>
-                        <span class="text-orange-600 font-semibold">💬 微信: CC-ART-2025</span>
-                        <span class="text-orange-600 font-semibold">📧 邮箱: info@ccart.com</span>
+                        <span class="text-orange-600 font-semibold">📞 咨询热线: 626-726-7965</span>
+                        <span class="text-orange-600 font-semibold">💬 微信: xxxi_zc</span>
+                        <span class="text-orange-600 font-semibold">📧 邮箱: ccartirvine@google.com</span>
                     </div>
                 </div>
             </div>
@@ -412,7 +412,7 @@
                 totalPrice: 1060,
                 originalPrice: 1180,
                 savings: 120,
-                description: '长期规划/兄妹合上更优惠'
+                description: '长期规划更优惠'
             }
         };
 
@@ -502,7 +502,8 @@
             console.log('Form Data for Backend:', formData);
             
             // Placeholder for backend integration
-            alert(`感谢选择 ${packageData[selectedPackage.value].name}！我们将尽快与您联系。`);
+            // alert(`感谢选择 ${packageData[selectedPackage.value].name}！我们将尽快与您联系。`);
+            alert(`请查阅下方联系方式与cc art联系～`);
         });
 
         // Mobile menu toggle
