--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                 <span class="text-white text-xl">🎨</span>
                             </div>
                             <h4 class="font-semibold text-gray-800 mb-2">专业指导</h4>
-                            <p class="text-sm text-gray-600">经验丰富的艺术老师一对一指导</p>
+                            <p class="text-sm text-gray-600">经验丰富的艺术老师小班制与1v1指导</p>
                         </div>
                         <div class="text-center">
                             <div class="w-12 h-12 gradient-orange rounded-full flex items-center justify-center mx-auto mb-3">
@@ -353,7 +353,7 @@
             <!-- Footer -->
             <div class="bg-gray-100 px-8 py-4 text-center">
                 <p class="text-xs text-gray-500">
-                    * 课程价格如有调整，以最新公布为准 | CC Art 版权所有
+                    * 课程价格如有调整，以本网站公布为准 | CC Art 版权所有
                 </p>
             </div>
         </div>
