--- a/pricing.html
+++ b/pricing.html
@@ -45,6 +45,7 @@
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium">首页</a>
                     <a href="pricing.html" class="nav-link active px-4 py-2 text-white font-medium">课价表</a>
                     <a href="about.html" class="nav-link px-4 py-2 text-white font-medium">关于老师</a>
+                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium">学员作品</a>
                     <a href="policy.html" class="nav-link px-4 py-2 text-white font-medium">课程政策</a>
                 </div>
 
@@ -61,6 +62,7 @@
                 <a href="index.html" class="block nav-link px-4 py-2 text-white font-medium">首页</a>
                 <a href="pricing.html" class="block nav-link px-4 py-2 text-white font-medium">课价表</a>
                 <a href="about.html" class="block nav-link px-4 py-2 text-white font-medium">关于老师</a>
+                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium">学员作品</a>
                 <a href="policy.html" class="block nav-link px-4 py-2 text-white font-medium">课程政策</a>
             </div>
         </div>
@@ -282,7 +284,7 @@
                 * 所有价格均为美元 | 课程价格如有调整，以最新公布为准
             </p>
             <p class="text-gray-500 text-sm">
-                CC Art 版权所有 © 2025 | 咨询热线: 400-XXX-XXXX | 微信: CC-ART-2025
+                CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc
             </p>
         </div>
     </footer>
