--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<a href="gallery.html" class="block nav-link<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -45,6 +45,7 @@
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium">首页</a>
                     <a href="pricing.html" class="nav-link px-4 py-2 text-white font-medium">课价表</a>
                     <a href="about.html" class="nav-link active px-4 py-2 text-white font-medium">关于老师</a>
+                    <a href="gallery.html" class="nav-link px-4 py-2 text-white font-medium">学员作品</a>
                     <a href="policy.html" class="nav-link px-4 py-2 text-white font-medium">课程政策</a>
                 </div>
 
@@ -61,6 +62,7 @@
                 <a href="index.html" class="block nav-link px-4 py-2 text-white font-medium">首页</a>
                 <a href="pricing.html" class="block nav-link px-4 py-2 text-white font-medium">课价表</a>
                 <a href="about.html" class="block nav-link px-4 py-2 text-white font-medium">关于老师</a>
+                <a href="gallery.html" class="block nav-link px-4 py-2 text-white font-medium">学员作品</a>
                 <a href="policy.html" class="block nav-link px-4 py-2 text-white font-medium">课程政策</a>
             </div>
         </div>
