--- a/policy.html
+++ b/policy.html
@@ -90,7 +90,7 @@
                         <div class="border-l-4 border-blue-400 pl-6">
                             <h4 class="font-semibold text-gray-800 mb-2">试课安排</h4>
                             <ul class="space-y-2">
-                                <li>• 首次学员需参加$20试课，体验课程内容和教学方式</li>
+                                <li>• 首次学员可参加$20试课，体验课程内容和教学方式</li>
                                 <li>• 试课包含所有材料费用，无额外收费</li>
                                 <li>• 试课后可决定是否购买正式课程套餐</li>
                                 <li>• 试课费用不可抵扣正式课程费用</li>
@@ -110,8 +110,8 @@
                         <div class="border-l-4 border-blue-400 pl-6">
                             <h4 class="font-semibold text-gray-800 mb-2">课包规则</h4>
                             <ul class="space-y-2">
-                                <li>• 课包购买后有效期为12个月</li>
-                                <li>• 课包不可转让给他人（同一家庭兄弟姐妹除外）</li>
+                                <li>• 课包购买后有效期为3个月</li>
+                                <li>• 课包不可转让给他人</li>
                                 <li>• 课包余额不可提现</li>
                                 <li>• 过期课包恕不延期</li>
                             </ul>
@@ -142,7 +142,7 @@
                                 <li>• 需至少提前24小时取消课程</li>
                                 <li>• 24小时内取消将扣除一次课时</li>
                                 <li>• 无故缺席将扣除一次课时</li>
-                                <li>• 紧急情况可特殊处理（需提供证明）</li>
+                                <li>• 紧急情况可特殊处理</li>
                             </ul>
                         </div>
                         
@@ -256,7 +256,6 @@
                             <ul class="space-y-2">
                                 <li>• 搬家或长期出差可协商处理</li>
                                 <li>• 重大疾病或意外可特殊考虑</li>
-                                <li>• 需提供相关证明文件</li>
                                 <li>• 最终解释权归CC Art所有</li>
                             </ul>
                         </div>
