--- a/policy.html
+++ b/policy.html
@@ -244,8 +244,11 @@
                         <div class="border-l-4 border-purple-400 pl-6">
                             <h4 class="font-semibold text-gray-800 mb-2">课包退费</h4>
                             <ul class="space-y-2">
-                                <li>• 购买后30天内，未使用课时可申请退款</li>
+                                <li>• 购买后48小时内，未使用课时可申请退款 80%</li>
+                                <li>• 购买后48小时后，未使用课时可申请退款 20%</li>
+                                <li>• 购买后14天后，不与退款</li>
                                 <li>• 已使用课时按单节课价格计算</li>
+                                <li>• 课程一旦开始使用（无论剩余课时多少）不可转课退款。</li>
                                 <li>• 退款金额 = 课包总价 - 已使用课时×单节价</li>
                                 <li>• 退款将在7-14个工作日内处理</li>
                             </ul>
@@ -273,8 +276,8 @@
                             <h4 class="font-semibold text-gray-800 mb-2">照片使用权</h4>
                             <ul class="space-y-2">
                                 <li>• 课程期间可能拍摄照片用于教学记录</li>
-                                <li>• 照片可能用于宣传推广（可选择退出）</li>
-                                <li>• 学员作品照片归学员所有</li>
+                                <li>• 照片可能用于宣传推广（可联系选择退出）</li>
+                                <li>• 学生作品照片归CC Art所有</li>
                                 <li>• 如不同意拍摄请提前告知</li>
                             </ul>
                         </div>
