--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                     <!-- Carousel Caption -->
                     <div class="text-center mt-6">
                         <p class="text-gray-600 text-sm">
-                            🎨 想要添加真实照片？请将图片放在 <code class="bg-gray-100 px-2 py-1 rounded text-xs">resources/img/carousel/</code> 文件夹中
+                            🎨 想加入我们cc art家庭吗
                         </p>
                     </div>
                 </div>
