--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
     <!-- Main Content -->
     <div class="min-h-screen p-6 flex items-center justify-center">
-        <div class="max-w-7xl w-full bg-white rounded-3xl shadow-custom overflow-hidden">
+        <div class="max-w-4xl w-full bg-white rounded-3xl shadow-custom overflow-hidden">
             <!-- Header Section -->
             <div class="relative gradient-orange p-8 text-center">
                 <div class="absolute inset-0 bg-black opacity-10"></div>
@@ -349,7 +349,7 @@
 
             <!-- Image Carousel Section -->
             <div class="bg-white py-12">
-                <div class="max-w-7xl mx-auto px-4 md:px-8">
+                <div class="max-w-6xl mx-auto px-4 md:px-8">
                     <div class="text-center mb-8">
                         <h2 class="text-2xl font-bold text-gray-800 mb-2">精彩瞬间</h2>
                         <p class="text-gray-600">学员作品与课堂活动展示</p>
@@ -864,7 +864,7 @@
                 totalPrice: 1060,
                 originalPrice: 1180,
                 savings: 120,
-                description: '长期规划'
+                description: '长期规划/ '
             }
         };
 
