--- a/pricing.html
+++ b/pricing.html
@@ -182,7 +182,7 @@
                                 <td class="px-6 py-4 text-center">
                                     <span class="bg-red-100 text-red-600 px-2 py-1 rounded-full text-xs font-semibold">省$120</span>
                                 </td>
-                                <td class="px-6 py-4 text-center text-gray-600">长期规划/ </td>
+                                <td class="px-6 py-4 text-center text-gray-600">长期规划</td>
                             </tr>
                         </tbody>
                     </table>
@@ -200,19 +200,19 @@
                     <div class="space-y-3">
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-green-500 rounded-full mr-3"></span>
-                            微信支付
+                            Zelle
                         </div>
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-green-500 rounded-full mr-3"></span>
-                            支付宝
+                            PayPal
+                        </div>
+                        <div class="flex items-center text-gray-600">
+                            <span class="w-2 h-2 bg-green-500 rounded-full mr-3"></span>
+                            Venmo
                         </div>
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-green-500 rounded-full mr-3"></span>
                             银行转账
-                        </div>
-                        <div class="flex items-center text-gray-600">
-                            <span class="w-2 h-2 bg-green-500 rounded-full mr-3"></span>
-                            信用卡/借记卡
                         </div>
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-green-500 rounded-full mr-3"></span>
@@ -234,15 +234,11 @@
                         </div>
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-blue-500 rounded-full mr-3"></span>
-                            课包有效期为购买后12个月
+                            课包有效期为购买后3个月
                         </div>
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-blue-500 rounded-full mr-3"></span>
                             可灵活安排上课时间
-                        </div>
-                        <div class="flex items-center text-gray-600">
-                            <span class="w-2 h-2 bg-blue-500 rounded-full mr-3"></span>
-                            兄弟姐妹可共享课包
                         </div>
                         <div class="flex items-center text-gray-600">
                             <span class="w-2 h-2 bg-blue-500 rounded-full mr-3"></span>
