--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                                 <span class="text-white text-xl">🎨</span>
                             </div>
                             <h4 class="font-semibold text-gray-800 mb-2">专业指导</h4>
-                            <p class="text-sm text-gray-600">经验丰富的艺术老师一对一指导</p>
+                            <p class="text-sm text-gray-600">经验丰富的艺术老师小班制与一对一指导</p>
                         </div>
                         <div class="text-center">
                             <div class="w-12 h-12 gradient-orange rounded-full flex items-center justify-center mx-auto mb-3">
@@ -768,9 +768,9 @@
                 <div class="mt-8 text-center">
                     <p class="text-gray-600 mb-2">咨询报名请联系</p>
                     <div class="flex justify-center items-center space-x-6 text-sm flex-wrap gap-2">
-                        <span class="text-orange-600 font-semibold">📞 咨询热线: 400-XXX-XXXX</span>
-                        <span class="text-orange-600 font-semibold">💬 微信: CC-ART-2025</span>
-                        <span class="text-orange-600 font-semibold">📧 邮箱: info@ccart.com</span>
+                        <span class="text-orange-600 font-semibold">📞 咨询热线: 626-726-7965</span>
+                        <span class="text-orange-600 font-semibold">💬 微信: xxxi_zc</span>
+                        <span class="text-orange-600 font-semibold">📧 邮箱: ccartirvine@gmail.com</span>
                     </div>
                 </div>
             </div>
@@ -864,7 +864,7 @@
                 totalPrice: 1060,
                 originalPrice: 1180,
                 savings: 120,
-                description: '长期规划/ '
+                description: '长期规划'
             }
         };
 
