--- a/pricing.html
+++ b/pricing.html
@@ -74,7 +74,7 @@
             <!-- Page Header -->
             <div class="text-center mb-12">
                 <h1 class="text-4xl font-bold text-gray-800 mb-4">课程价格表</h1>
-                <p class="text-lg text-gray-600">透明定价，无隐藏费用</p>
+                <p class="text-lg text-gray-600">无隐藏费用</p>
                 <div class="w-24 h-1 bg-gradient-to-r from-orange-400 to-amber-400 mx-auto mt-4 rounded-full"></div>
             </div>
 
