--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                                         省$120
                                     </div>
                                 </div>
-                                <p class="text-sm text-gray-600 mb-4">长期规划/ </p>
+                                <p class="text-sm text-gray-600 mb-4">长期规划/进阶学习 </p>
                                 <input type="radio" name="package" value="package20" id="package20" class="hidden">
                                 <label for="package20" class="block w-full py-2 px-4 rounded-lg font-semibold btn-secondary cursor-pointer text-center">
                                     选择套餐
@@ -864,7 +864,7 @@
                 totalPrice: 1060,
                 originalPrice: 1180,
                 savings: 120,
-                description: '长期规划'
+                description: '长期规划/进阶学习'
             }
         };
 
