--- a/pricing.html
+++ b/pricing.html
@@ -182,7 +182,7 @@
                                 <td class="px-6 py-4 text-center">
                                     <span class="bg-red-100 text-red-600 px-2 py-1 rounded-full text-xs font-semibold">省$120</span>
                                 </td>
-                                <td class="px-6 py-4 text-center text-gray-600">长期规划</td>
+                                <td class="px-6 py-4 text-center text-gray-600">长期规划/进阶学习</td>
                             </tr>
                         </tbody>
                     </table>
