--- a/about.html
+++ b/about.html
@@ -372,7 +372,7 @@
                 用心教学，让每个学员都能发现艺术的美好
             </p>
             <p class="text-gray-500 text-sm">
-                CC Art 版权所有 © 2025 | 咨询热线: 400-XXX-XXXX | 微信: CC-ART-2025
+                CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc
             </p>
         </div>
     </footer>
