--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <div class="mt-8 text-center">
                     <p class="text-gray-600 mb-2">咨询报名请联系</p>
                     <div class="flex justify-center items-center space-x-6 text-sm flex-wrap gap-2">
-                        <span class="text-orange-600 font-semibold">📞 咨询热线: 626-726-7965</span>
+                        <span class="text-orange-600 font-semibold">📞 咨询: 626-726-7965</span>
                         <span class="text-orange-600 font-semibold">💬 微信: xxxi_zc</span>
                         <span class="text-orange-600 font-semibold">📧 邮箱: ccartirvine@gmail.com</span>
                     </div>
