--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
                                 </span>
                                 <div>
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">教育背景</h4>
-                                    <p>洛杉矶奥蒂斯艺术设计学院 游戏与娱乐设计专业 美术学士（预计2025年5月毕业）</p>
-                                    <p class="text-orange-600 font-medium mt-1">获得奥蒂斯总统奖学金</p>
+                                    <p>洛杉矶奥蒂斯艺术设计学院(otis) 游戏与娱乐设计专业 美术本科学士</p>
+                                    <p class="text-orange-600 font-medium mt-1">获得四年全年奥蒂斯总统奖学金</p>
                                 </div>
                             </div>
                             
