--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
                                 </span>
                                 <div>
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">教育背景</h4>
-                                    <p>洛杉矶奥蒂斯艺术设计学院(otis) 游戏与娱乐设计专业 美术本科学士</p>
-                                    <p class="text-orange-600 font-medium mt-1">获得四年全年奥蒂斯总统奖学金</p>
+                                    <p>洛杉矶奥蒂斯艺术设计学院 游戏与娱乐设计专业 美术学士学位</p>
+                                    <p class="text-orange-600 font-medium mt-1">获得奥蒂斯总统奖学金</p>
                                 </div>
                             </div>
                             
@@ -120,8 +120,8 @@
                                 <div>
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">专业经验</h4>
                                     <div class="space-y-2">
-                                        <p><strong>Microsoft(微软)</strong> - 概念艺术实习生 (2024.12 - 2025.2)</p>
-                                        <p><strong>Halona Art Studio</strong> - 艺术老师与设计师 (2022.3 - 2025.4)</p>
+                                        <p><strong>微软公司</strong> - 概念艺术实习生 (2024.12 - 2025.2)</p>
+                                        <p><strong>Halona Art Studio</strong> - 兼职艺术讲师与设计师 (2022.3 - 2025.4)</p>
                                         <p>专精于3D环境设计、丙烯绘画、数字艺术、泥塑等多种艺术形式</p>
                                     </div>
                                 </div>
@@ -132,8 +132,8 @@
                                     🏆
                                 </span>
                                 <div>
-                                    <h4 class="font-semibold text-gray-800 text-xl mb-2">专业技能</h4>
-                                    <div class="grid grid-cols-2 gap-2">
+                                    <h4 class="font-semibold text-gray-800 text-xl mb-2">专业技能与作品</h4>
+                                    <div class="grid grid-cols-2 gap-2 mb-3">
                                         <p>• 3D建模 (Maya, Blender)</p>
                                         <p>• 数字绘画 (Photoshop)</p>
                                         <p>• 材质制作 (Substance Painter)</p>
@@ -141,6 +141,11 @@
                                         <p>• 丙烯绘画</p>
                                         <p>• 泥塑艺术</p>
                                     </div>
+                                    <p class="text-orange-600 font-medium">
+                                        🌐 <a href="https://chenxiz.carbonmade.com/" target="_blank" class="hover:underline">
+                                            查看更多专业作品集
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -375,10 +380,19 @@
                             </div>
                         </div>
                         <div class="flex items-center">
+                            <span class="w-10 h-10 bg-orange-100 rounded-full flex items-center justify-center mr-6">🌐</span>
+                            <div>
+                                <h4 class="font-semibold text-gray-800 text-xl">作品网站</h4>
+                                <a href="https://chenxiz.carbonmade.com/" target="_blank" class="text-orange-600 text-lg hover:underline">
+                                    chenxiz.carbonmade.com
+                                </a>
+                            </div>
+                        </div>
+                        <div class="flex items-center">
                             <span class="w-10 h-10 bg-orange-100 rounded-full flex items-center justify-center mr-6">📍</span>
                             <div>
                                 <h4 class="font-semibold text-gray-800 text-xl">教学地点</h4>
-                                <p class="text-gray-600 text-lg">尔湾地区户外及艺术工作室</p>
+                                <p class="text-gray-600 text-lg">洛杉矶地区户外公园及艺术工作室</p>
                             </div>
                         </div>
                     </div>
