--- a/about.html
+++ b/about.html
@@ -89,7 +89,8 @@
                         <div class="w-64 h-64 bg-white rounded-full flex items-center justify-center shadow-xl">
                             <!-- Placeholder for teacher photo -->
                             <div class="w-60 h-60 bg-gray-100 rounded-full flex items-center justify-center">
-                                <span class="text-6xl text-gray-400">👩‍🎨</span>
+                                <!-- <span class="text-6xl text-gray-400">👩‍🎨</span> -->
+                                <img src="https://via.placeholder.com/240" alt="张晨曦老师" class="w-full h-full object-cover rounded-full">
                             </div>
                         </div>
                     </div>
@@ -108,8 +109,8 @@
                                 </span>
                                 <div>
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">教育背景</h4>
-                                    <p>洛杉矶奥蒂斯艺术设计学院 游戏与娱乐设计专业 美术学士学位</p>
-                                    <p class="text-orange-600 font-medium mt-1">获得奥蒂斯总统奖学金</p>
+                                    <p>洛杉矶奥蒂斯艺术设计学院(otis) 游戏与娱乐设计专业 美术学士学位</p>
+                                    <p class="text-orange-600 font-medium mt-1">四年全年奥蒂斯总统奖学金</p>
                                 </div>
                             </div>
                             
@@ -120,8 +121,8 @@
                                 <div>
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">专业经验</h4>
                                     <div class="space-y-2">
-                                        <p><strong>微软公司</strong> - 概念艺术实习生 (2024.12 - 2025.2)</p>
-                                        <p><strong>Halona Art Studio</strong> - 兼职艺术讲师与设计师 (2022.3 - 2025.4)</p>
+                                        <p><strong>Microsoft(微软)</strong> - 概念艺术实习生 (2024.12 - 2025.2)</p>
+                                        <p><strong>Halona Art Studio</strong> - 艺术老师与设计师 (2022.3 - 2025.4)</p>
                                         <p>专精于3D环境设计、丙烯绘画、数字艺术、泥塑等多种艺术形式</p>
                                     </div>
                                 </div>
