--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">专业经验</h4>
                                     <div class="space-y-2">
                                         <p><strong>Microsoft(微软)</strong> - 概念艺术实习生 (2024.12 - 2025.2)</p>
-                                        <p><strong>Halona Art Studio</strong> - 艺术老师与设计师 (2022.3 - 2025.4)</p>
+                                        <p><strong>Art Studio</strong> - 艺术老师与设计师 (2022.3 - 2025.4)</p>
                                         <p>专精于3D环境设计、丙烯绘画、数字艺术、泥塑等多种艺术形式</p>
                                     </div>
                                 </div>
