--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                             <!-- Placeholder for teacher photo -->
                             <div class="w-60 h-60 bg-gray-100 rounded-full flex items-center justify-center">
                                 <!-- <span class="text-6xl text-gray-400">👩‍🎨</span> -->
-                                <img src="https://via.placeholder.com/240" alt="张晨曦老师" class="w-full h-full object-cover rounded-full">
+                                <img src="resources/img/teacher/chenxi.jpg" alt="张晨曦老师" class="w-full h-full object-cover rounded-full">
                             </div>
                         </div>
                     </div>
