--- a/pricing.html
+++ b/pricing.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="border-l-4 border-orange-400 pl-6">
                         <h4 class="font-semibold text-gray-800 mb-2">Q: 兄弟姐妹可以共享课包吗？</h4>
-                        <p class="text-gray-600">是的，同一家庭的兄弟姐妹可以共享课包，但每次上课只能安排一位学员。</p>
+                        <p class="text-gray-600">我们相信并尊重每个小朋友都是独立的哦，所以很抱歉课包不可以共享</p>
                     </div>
                 </div>
             </div>
