--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                     <!-- Teacher Info -->
                     <div class="md:w-2/3 p-10">
                         <div class="mb-8">
-                            <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">张晨曦 Chenxi</h2>
+                            <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Chenxi Zhang</h2>
                             <p class="text-2xl md:text-3xl text-orange-600 font-semibold">CC Art 创始人 & 导师</p>
                         </div>
                         
