--- a/policy.html
+++ b/policy.html
@@ -291,8 +291,13 @@
                                 <li>• 建议购买个人意外保险</li>
                             </ul>
                         </div>
+
+                            <!-- 顶部横幅提示 -->
+                        <div class="bg-red-100 border border-red-300 text-red-700 px-4 py-2 text-center text-sm">
+                            本课程由 CC Art 团队运营，正在筹备注册正式机构（LLC）。所有报名参与视为理解并接受当前运营方式。注册完成后将更新为正式公司条款。
+                        </div>
                         
-                        <div class="border-l-4 border-gray-400 pl-6">
-                            <h4 class="font-semibold text-gray-800 mb-2">政策更新</h4>
-                            <ul class="space-y-2">
-                                <li>• CC Art保留政策更新的权利</li>
+                        <footer class="text-sm text-gray-500 text-center mt-20 mb-10">
+                            <p>所有政策内容最终解释权将以合理协商方式处理。如涉及重大变动，将提前告知并在本页更新。</p>
+                            <p>© 2025 CC Art Studio. 本页面内容仅作为临时协议使用，待注册机构后将依法修订。</p>
+                        </footer>
