--- a/about.html
+++ b/about.html
@@ -109,8 +109,9 @@
                                 </span>
                                 <div>
                                     <h4 class="font-semibold text-gray-800 text-xl mb-2">教育背景</h4>
-                                    <p>洛杉矶奥蒂斯艺术设计学院(otis) 游戏与娱乐设计专业 美术学士学位</p>
-                                    <p class="text-orange-600 font-medium mt-1">四年全年奥蒂斯总统奖学金</p>
+                                    <p>洛杉矶奥蒂斯艺术设计学院(otis)</p>
+                                    <p class="text-gray-500">• 游戏与娱乐设计专业 美术学士学位</p>
+                                    <p class="text-orange-600 font-medium mt-1">• 四年全年奥蒂斯总统奖学金</p>
                                 </div>
                             </div>
                             
