--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                                 <span class="text-white text-xl">🎨</span>
                             </div>
                             <h4 class="font-semibold text-gray-800 mb-2">专业指导</h4>
-                            <p class="text-sm text-gray-600">经验丰富的艺术老师小班制与一对一指导</p>
+                            <p class="text-sm text-gray-600">5人小班制与一对一指导</p>
                         </div>
                         <div class="text-center">
                             <div class="w-12 h-12 gradient-orange rounded-full flex items-center justify-center mx-auto mb-3">
