--- a/pricing.html
+++ b/pricing.html
@@ -261,7 +261,7 @@
                         <p class="text-gray-600">所有课包的有效期为购买后3个月，您可以在有效期内灵活安排上课时间。</p>
                     </div>
                     <div class="border-l-4 border-orange-400 pl-6">
-                        <h4 class="font-semibent text-gray-800 mb-2">Q: 可以退课吗？</h4>
+                        <h4 class="font-semibold text-gray-800 mb-2">Q: 可以退课吗？</h4>
                         <p class="text-gray-600">未使用的课时可以在购买后14天内申请退款，已使用的课时不可退费。具体退款政策请查看课程政策页面。</p>
                     </div>
                     <div class="border-l-4 border-orange-400 pl-6">
