--- a/policy.html
+++ b/policy.html
@@ -293,8 +293,8 @@
                         </div>
 
                             <!-- 顶部横幅提示 -->
-                        <div class="bg-red-100 border border-red-300 text-red-700 px-4 py-2 text-center text-sm">
-                            本课程由 CC Art 团队运营，正在筹备注册正式机构（LLC）。所有报名参与视为理解并接受当前运营方式。注册完成后将更新为正式公司条款。
+                        <div class="bg-red-100 border border-red-200 text-red-400 px-4 py-2 text-center text-sm">
+                            本课程由 CC Art 团队/个人独立运营，具备完整教学流程与服务规范。品牌注册正在进行中，所有课程条款在未来将自动升级为正式协议
                         </div>
                         
                         <footer class="text-sm text-gray-500 text-center mt-20 mb-10">
