--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                                             <span class="text-4xl">🖼️</span>
                                         </div>
                                         <h3 class="text-xl font-semibold text-gray-800 mb-2">作品展示会</h3>
-                                        <p class="text-gray-600">学员们展示自己的绘画成果</p>
+                                        <p class="text-gray-600">孩子们展示自己的绘画成果</p>
                                     </div>
                                 </div>
                                 <img src="resources/img/activity/art4.jpg" alt="学员作品12" class="w-full h-full object-cover">
