--- a/gallery.html
+++ b/gallery.html
@@ -272,11 +272,11 @@
             </div>
 
             <!-- Success Stories Section -->
-            <div class="mt-16 bg-white rounded-3xl shadow-2xl p-8">
+            <!-- <div class="mt-16 bg-white rounded-3xl shadow-2xl p-8">
                 <h2 class="text-2xl font-bold text-gray-800 mb-8 text-center">学员成功故事</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8"> -->
                     <!-- Story placeholders - to be filled with actual content -->
-                    <div class="bg-orange-50 rounded-xl p-6">
+                    <!-- <div class="bg-orange-50 rounded-xl p-6">
                         <div class="w-16 h-16 bg-orange-200 rounded-full mx-auto mb-4 flex items-center justify-center">
                             <span class="text-2xl">👧</span>
                         </div>
@@ -323,7 +323,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Image Modal -->
     <div id="imageModal" class="modal">
@@ -362,8 +362,8 @@
                 id: 1,
                 src: 'resources/img/activity/solo1.jpg',
                 thumbnail: 'resources/img/activity/solo1.jpg',
-                title: '熊猫的春天',
-                description: '学员小明在公园里创作的熊猫作品，色彩鲜艳',
+                title: '快乐熊猫',
+                description: '学生创作的熊猫作品，色彩鲜艳',
                 category: 'landscape',
                 studentAge: '8岁',
                 date: '2025-03-15'
@@ -372,8 +372,8 @@
                 id: 2,
                 src: 'resources/img/activity/solo2.jpg',
                 thumbnail: 'resources/img/activity/solo2.jpg',
-                title: '海边日落',
-                description: '小红同学的海豚作品，色彩运用很棒',
+                title: '神奇海洋',
+                description: '学生的海豚作品，色彩运用很棒',
                 category: 'landscape',
                 studentAge: '10岁',
                 date: '2025-03-20'
@@ -385,7 +385,7 @@
                 src: 'resources/img/activity/solo3.jpg',
                 thumbnail: 'resources/img/activity/solo3.jpg',
                 title: '自画像练习',
-                description: '学员自画像作品，表现力很强',
+                description: '学生自画像作品，表现力很强',
                 category: 'portrait',
                 studentAge: '12岁',
                 date: '2025-06-15'
@@ -396,7 +396,7 @@
                 id: 4,
                 src: 'resources/img/activity/solo4.jpg',
                 thumbnail: 'resources/img/activity/solo4.jpg',
-                title: '小兔子',
+                title: '跳跳兔',
                 description: '色彩丰富的小兔子创作',
                 category: 'still-life',
                 studentAge: '9岁',
