--- a/gallery.html
+++ b/gallery.html
@@ -372,8 +372,8 @@
                 id: 2,
                 src: 'resources/img/activity/solo2.jpg',
                 thumbnail: 'resources/img/activity/solo2.jpg',
-                title: '神奇海洋',
-                description: '学生的海豚作品，色彩运用很棒',
+                title: '鲸鱼之旅',
+                description: '学生的鲸鱼作品，色彩运用很棒',
                 category: 'landscape',
                 studentAge: '6岁',
                 date: '2025-03-20'
