--- a/gallery.html
+++ b/gallery.html
@@ -386,7 +386,7 @@
                 thumbnail: 'resources/img/activity/solo3.jpg',
                 title: '神奇海洋',
                 description: '学生海豚作品，表现力很强',
-                category: 'portrait',
+                category: 'landscape',
                 studentAge: '6岁',
                 date: '2025-06-15'
             },
@@ -398,7 +398,7 @@
                 thumbnail: 'resources/img/activity/solo4.jpg',
                 title: '跳跳兔',
                 description: '色彩丰富的小兔子创作',
-                category: 'still-life',
+                category: 'landscape',
                 studentAge: '5岁',
                 date: '2025-06-15'
             },
