--- a/about.html
+++ b/about.html
@@ -422,7 +422,7 @@
                                 <textarea placeholder="留言或特殊需求" rows="4" class="w-full px-5 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-400 focus:border-transparent text-base"></textarea>
                             </div>
                             <button type="submit" class="w-full bg-gradient-to-r from-orange-400 to-amber-400 text-white py-3 rounded-lg font-semibold text-lg hover:opacity-90 transition-opacity">
-                                提交预约
+                                提交预约(请通过左侧联系方式联系老师，功能正在开发中 :) ！
                             </button>
                         </form>
                     </div>
