--- a/about.html
+++ b/about.html
@@ -321,37 +321,47 @@
                   <span class="lang-zh">代表作品</span>
                   <span class="lang-en">Project Showcase</span>
                 </h3>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <!-- 亡灵节作品1 -->
                     <div class="bg-gradient-to-br from-orange-50 to-amber-50 rounded-xl p-6">
-                        <div class="aspect-video bg-gray-200 rounded-lg flex items-center justify-center mb-4">
-                            <span class="text-gray-500 text-lg">
-                              <span class="lang-zh">《亡灵节游戏地图》</span>
-                              <span class="lang-en">"Day of the Dead" Game Map</span>
-                            </span>
+                        <div class="aspect-video bg-gray-200 rounded-lg flex items-center justify-center mb-4 overflow-hidden">
+                            <img src="resources/img/teacher-art/1.png" alt="亡灵节游戏地图1 / Day of the Dead Map 1" class="object-cover w-full h-full">
                         </div>
                         <h4 class="font-bold text-gray-800 text-xl mb-3">
-                          <span class="lang-zh">亡灵节游戏地图设计</span>
-                          <span class="lang-en">Day of the Dead Game Map Design</span>
+                          <span class="lang-zh">亡灵节游戏地图设计（一）</span>
+                          <span class="lang-en">Day of the Dead Game Map Design (1)</span>
                         </h4>
                         <p class="text-gray-600 text-base">
-                          <span class="lang-zh">从2D概念设计到3D建模，创作了以墨西哥瓦哈卡传统元素为灵感的完整游戏环境。运用Maya进行建模，Substance Painter制作材质，展现了深厚的3D艺术功底。</span>
-                          <span class="lang-en">From 2D concept to 3D modeling, created a full game environment inspired by traditional elements of Oaxaca, Mexico. Used Maya for modeling and Substance Painter for texturing, demonstrating strong 3D art skills.</span>
+                          <span class="lang-zh">以墨西哥瓦哈卡传统元素为灵感，2D概念到3D建模，展现完整游戏环境。</span>
+                          <span class="lang-en">Inspired by Oaxaca, Mexico, from 2D concept to 3D modeling, presenting a complete game environment.</span>
                         </p>
                     </div>
-                    <div class="bg-gradient-to-br from-blue-50 to-purple-50 rounded-xl p-6">
-                        <div class="aspect-video bg-gray-200 rounded-lg flex items-center justify-center mb-4">
-                            <span class="text-gray-500 text-lg">
-                              <span class="lang-zh">《永恒传说》盲盒</span>
-                              <span class="lang-en">"Eternal Legend" Blind Box</span>
-                            </span>
+                    <!-- 亡灵节作品2 -->
+                    <div class="bg-gradient-to-br from-orange-50 to-amber-50 rounded-xl p-6">
+                        <div class="aspect-video bg-gray-200 rounded-lg flex items-center justify-center mb-4 overflow-hidden">
+                            <img src="resources/img/teacher-art/2.png" alt="亡灵节游戏地图2 / Day of the Dead Map 2" class="object-cover w-full h-full">
                         </div>
                         <h4 class="font-bold text-gray-800 text-xl mb-3">
-                          <span class="lang-zh">永恒传说盲盒系列</span>
-                          <span class="lang-en">Eternal Legend Blind Box Series</span>
+                          <span class="lang-zh">亡灵节游戏地图设计（二）</span>
+                          <span class="lang-en">Day of the Dead Game Map Design (2)</span>
                         </h4>
                         <p class="text-gray-600 text-base">
-                          <span class="lang-zh">从2D角色设计到ZBrush 3D建模，再到3D打印制作实体模型。完整的产品设计流程，包括包装设计，展现了全方位的艺术创作能力。</span>
-                          <span class="lang-en">From 2D character design to ZBrush 3D modeling and 3D printing of physical models. Complete product design process including packaging, showcasing comprehensive artistic skills.</span>
+                          <span class="lang-zh">3D建模与材质细节，突出节日氛围与色彩表现。</span>
+                          <span class="lang-en">3D modeling and texturing, highlighting festive atmosphere and color expression.</span>
+                        </p>
+                    </div>
+                    <!-- Cyberpunk作品3 -->
+                    <div class="bg-gradient-to-br from-blue-50 to-purple-50 rounded-xl p-6">
+                        <div class="aspect-video bg-gray-200 rounded-lg flex items-center justify-center mb-4 overflow-hidden">
+                            <img src="resources/img/teacher-art/3.png" alt="Cyberpunk City" class="object-cover w-full h-full">
+                        </div>
+                        <h4 class="font-bold text-gray-800 text-xl mb-3">
+                          <span class="lang-zh">赛博朋克城市设计</span>
+                          <span class="lang-en">Cyberpunk City Design</span>
+                        </h4>
+                        <p class="text-gray-600 text-base">
+                          <span class="lang-zh">未来都市风格3D场景，融合霓虹灯与高科技元素，展现数字艺术创作力。</span>
+                          <span class="lang-en">Futuristic 3D city scene with neon and high-tech elements, showcasing digital art creativity.</span>
                         </p>
                     </div>
                 </div>
