--- a/about.html
+++ b/about.html
@@ -364,6 +364,13 @@
                           <span class="lang-en">Futuristic 3D city scene with neon and high-tech elements, showcasing digital art creativity.</span>
                         </p>
                     </div>
+                        <p class="text-orange-600 font-medium">
+                            🌐
+                            <a href="https://chenxiz.carbonmade.com/" target="_blank" class="hover:underline inline-block min-w-[120px]">
+                                <span class="lang-zh">查看更多专业作品集</span>
+                                <span class="lang-en">View More Portfolio</span>
+                            </a>
+                        </p>
                 </div>
             </div>
 
