--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                             <!-- Summary will be populated by JavaScript -->
                         </div>
                         <button type="submit" id="book-button" class="mt-4 w-full py-3 px-6 btn-primary text-white font-semibold rounded-lg" disabled>
-                            <span class="lang-zh">预订课程</span>
+                            <span class="lang-zh">请查看下方联系方式咨询</span>
                             <span class="lang-en">Book Course</span>
                         </button>
                     </div>
@@ -1168,7 +1168,7 @@
                 updatePackageSummary(packageType);
                 
                 // Enable book button
-                bookButton.disabled = false;
+                bookButton.disabled = true;
             });
         });
 
